fix: root theme / range z-index

--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -159,7 +159,6 @@ input[type='range'] {
 	&::-webkit-slider-runnable-track {
 		cursor: pointer;
 		position: relative;
-		z-index: 99;
 
 		width: 100%;
 
